# spiral-galaxy-chirality

./: .gitignore  README.md  main.py  pyproject.toml
labeler/: README.md  app.js  index.html  serve.py  style.css
model/: README.md  data.py  net.py  synthetic.py  test_model.py  train.py
results/: README.md  app.js  index.html  style.css
scripts/: download_gz_hubble.py
